--- a/index.html
+++ b/index.html
@@ -249,8 +249,6 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 
 <div class="skills-track track-left">
 
-<!-- ORIGINAL SET -->
-
 <div class="skill-item">
 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg">
 <span>Python</span>
@@ -299,6 +297,10 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 <div class="skill-item">
 <img src="https://cdn.jsdelivr.net/gh/microsoft/PowerBI-Icons@main/SVG/Power-BI.svg">
 <span>Power BI</span>
+</div>
+<div class="skill-item">
+  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS">
+  <span>AWS</span>
 </div>
 
 
@@ -354,6 +356,11 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 <span>Power BI</span>
 </div>
 
+<div class="skill-item">
+  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS">
+  <span>AWS</span>
+</div>
+
 </div>
 
 </div>
@@ -369,6 +376,12 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apachekafka/apachekafka-original.svg">
 <span>Kafka</span>
 </div>
+
+<div class="skill-item">
+  <img src="https://lobehub.com/icons/langgraph.svg" alt="LangGraph Logo" height="48">
+  <span>LangGraph</span>
+</div>
+
 
 <div class="skill-item">
 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apachespark/apachespark-original.svg">
@@ -406,13 +419,13 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 </div>
 
 <div class="skill-item">
-<img src="https://upload.wikimedia.org/wikipedia/commons/8/8b/NLTK_logo.png">
-<span>NLP</span>
+  <img src="https://img.icons8.com/color/48/artificial-intelligence.png" alt="NLP">
+  <span>NLP</span>
 </div>
 
 <div class="skill-item">
-<img src="https://registry.npmmirror.com/@lobehub/icons-static-png/latest/files/light/langchain.png">
-<span>LangChain</span>
+  <img src="https://img.icons8.com/color/96/microsoft-excel-2019.png" alt="MS Excel">
+  <span>MS Excel</span>
 </div>
 
 
@@ -422,6 +435,7 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apachekafka/apachekafka-original.svg">
 <span>Kafka</span>
 </div>
+
 
 <div class="skill-item">
 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apachespark/apachespark-original.svg">
@@ -465,14 +479,20 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 </div>
 
 <div class="skill-item">
-<img src="https://upload.wikimedia.org/wikipedia/commons/8/8b/NLTK_logo.png">
-<span>NLP</span>
+  <img src="https://img.icons8.com/color/48/artificial-intelligence.png" alt="NLP">
+  <span>NLP</span>
 </div>
 
 <div class="skill-item">
 <img src="https://registry.npmmirror.com/@lobehub/icons-static-png/latest/files/light/langchain.png">
 <span>LangChain</span>
 </div>
+
+<div class="skill-item">
+  <img src="https://img.icons8.com/color/96/microsoft-excel-2019.png" alt="MS Excel">
+  <span>MS Excel</span>
+</div>
+
 
 </div>
 
@@ -746,6 +766,15 @@ target="_blank">
 LinkedIn
 
 </a>
+<!-- INSTAGRAM -->
+<a href="https://www.instagram.com/aryanve_rma?igsh=MTZ5MHo0azI2MW5mbA=="
+class="btn btn-outline-light m-2"
+target="_blank">
+
+<i class="bi bi-instagram"></i>
+Instagram
+
+</a>
 
 </div>
 
@@ -762,3 +791,4 @@ LinkedIn
 
 </body>
 </html>
+
