--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 
 <img src="p1.png" class="project-img">
 
-<h5 class="mt-3">Hazard Asteroid Intelligence Pipeline</h5>
+<h5 class="mt-3">Hazard Asteroid Intelligence</h5>
 
 <p class="project-desc">
 </p>
@@ -785,5 +785,6 @@ Instagram
 
 </body>
 </html>
+
 
 
