--- a/index.html
+++ b/index.html
@@ -255,9 +255,20 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 </div>
 
 <div class="skill-item">
+  <img src="https://cdn.simpleicons.org/langchain/00A67E" alt="LangChain Logo" height="48">
+  <span>LangGraph</span>
+</div>
+
+
+<div class="skill-item">
 <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Matplotlib_icon.svg">
 <span>Matplotlib</span>
 </div>
+<div class="skill-item">
+  <img src="https://seaborn.pydata.org/_images/logo-mark-lightbg.svg" alt="Seaborn Logo" height="48">
+  <span>Seaborn</span>
+</div>
+
 
 <div class="skill-item">
 <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg">
@@ -312,9 +323,19 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 </div>
 
 <div class="skill-item">
+  <img src="https://cdn.simpleicons.org/langchain/00A67E" alt="LangChain Logo" height="48">
+  <span>LangGraph</span>
+</div>
+
+<div class="skill-item">
 <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Matplotlib_icon.svg">
 <span>Matplotlib</span>
 </div>
+<div class="skill-item">
+  <img src="https://seaborn.pydata.org/_images/logo-mark-lightbg.svg" alt="Seaborn Logo" height="48">
+  <span>Seaborn</span>
+</div>
+
 
 <div class="skill-item">
 <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg">
@@ -378,6 +399,19 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 </div>
 
 <div class="skill-item">
+  <img src="https://cdn-icons-png.flaticon.com/512/2103/2103633.png" alt="Neural Network Logo" height="48">
+  <span>Deep Learning</span>
+</div>
+
+
+
+<div class="skill-item">
+  <img src="https://cdn.simpleicons.org/langchain/00A67E" alt="LangChain Logo" height="48">
+  <span>LangChain</span>
+</div>
+
+
+<div class="skill-item">
 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apachespark/apachespark-original.svg">
 <span>PySpark</span>
 </div>
@@ -430,11 +464,24 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 <span>Kafka</span>
 </div>
 
+<div class="skill-item">
+  <img src="https://cdn-icons-png.flaticon.com/512/2103/2103633.png" alt="Neural Network Logo" height="48">
+  <span>Deep Learning</span>
+</div>
+
+
+<div class="skill-item">
+  <img src="https://cdn.simpleicons.org/langchain/00A67E" alt="LangChain Logo" height="48">
+  <span>LangChain</span>
+</div>
+
 
 <div class="skill-item">
 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apachespark/apachespark-original.svg">
 <span>PySpark</span>
 </div>
+
+
 
 <div class="skill-item">
 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/fastapi/fastapi-original.svg">
@@ -477,10 +524,6 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
   <span>NLP</span>
 </div>
 
-<div class="skill-item">
-<img src="https://registry.npmmirror.com/@lobehub/icons-static-png/latest/files/light/langchain.png">
-<span>LangChain</span>
-</div>
 
 <div class="skill-item">
   <img src="https://img.icons8.com/color/96/microsoft-excel-2019.png" alt="MS Excel">
@@ -491,6 +534,7 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 </div>
 
 </div>
+
 
 <!-- EXPERIENCE SECTION -->
 <section id="experience" class="section">
@@ -785,6 +829,7 @@ Instagram
 
 </body>
 </html>
+
 
 
 
