--- a/index.html
+++ b/index.html
@@ -452,10 +452,9 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 </div>
 
 <div class="skill-item">
-  <img src="https://img.icons8.com/color/96/microsoft-excel-2019.png" alt="MS Excel">
-  <span>MS Excel</span>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Microsoft_365_%282022%29.svg" alt="Microsoft 365 Logo" height="48">
+  <span>Microsoft 365</span>
 </div>
-
 
 <!-- DUPLICATE SAME SET AGAIN FOR LOOP -->
 
@@ -526,8 +525,8 @@ I am an AI Engineer specializing in designing and deploying real-time, scalable
 
 
 <div class="skill-item">
-  <img src="https://img.icons8.com/color/96/microsoft-excel-2019.png" alt="MS Excel">
-  <span>MS Excel</span>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Microsoft_365_%282022%29.svg" alt="Microsoft 365 Logo" height="48">
+  <span>Microsoft 365</span>
 </div>
 
 
@@ -829,6 +828,7 @@ Instagram
 
 </body>
 </html>
+
 
 
 
