--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Building scalable AI systems powered by real-time data and cloud.
 </p>
 
 <a href="https://github.com/ARYANVERMA893"
-class="btn btn-primary mt-3">
+class="btn btn-primary mt-3" target="_blank">
 
 <i class="bi bi-github"></i> View GitHub
 
@@ -828,6 +828,7 @@ Instagram
 
 </body>
 </html>
+
 
 
 
